Fixed overflow on mobile view (maybe)

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ h1 {
   position: relative;
   background-color: rgba(0,0,0,0.4);
   color: #fff;
+  overflow: hidden;
 }
 
 .app:before {
